# desktop-todo

./: GET_STARTED_WINDOWS.md  README.md  generate_icon.py  index.html  package.json  pnpm-lock.yaml  prototype.html  vite.config.ts
.github/workflows/: build.yml
docs/: GET_STARTED_WINDOWS.md  产出物清单.md  需求沟通记录.md
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: logic.test.ts  logic.ts  types.ts
src/store/: db.ts
