[package]
name = "desktop-todo"
version = "0.1.0"
description = "透明桌面待办清单"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# 默认特性，供 Tauri 内部使用
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
